# bb-text-extractor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  Readme.md  vcpkg.json
.github/workflows/: build-windows.yml  ci_multiplatform_build.yml
.vcpkg/ports/glfw3/: vcpkg.json
.vcpkg/ports/physfs/: vcpkg.json
.vcpkg/triplets/: arm64-osx.cmake
assets/app_settings/apple/: Info.plist
src/: AboutWindow.h  AppState.h  CMakeLists.txt  ConsoleWindow.cpp  ConsoleWindow.h  ToolsWindow.cpp  ToolsWindow.h  bb-text-extractor.cpp  bb-text-extractor.main.cpp
src/assets/backgrounds/: loading_screen_02.cpp  loading_screen_02.h
src/assets/fonts/: font.h  fontawesome-webfont.h
src/imgui_utilities/: CMakeLists.txt  FontLoader.h  HyperlinkHelper.h  ImGuiExt.cpp  MarkdownHelper.cpp  MarkdownHelper.h  imFileDialog.cpp  imFileDialog.h
src/source_parse/: CMakeLists.txt  GuiHeaderTree.h  HeaderTree.h  ImGuiCodeParser.cpp  ImGuiDemoParser.cpp
src/text-extractor/: CMakeLists.txt  binding.cpp  binding.h
src/ui/: AboutWindow.cpp  AboutWindow.h  AppState.h  ConsoleWindow.cpp  ConsoleWindow.h  ToolsWindow.cpp  ToolsWindow.h  UsageWindow.cpp  UsageWindow.h
src/ui/imgui_utilities/: CMakeLists.txt  FontLoader.h  HyperlinkHelper.cpp  MarkdownHelper.cpp  MarkdownHelper.h
src/ui/source_parse/: CMakeLists.txt  GuiHeaderTree.cpp  GuiHeaderTree.h  HeaderTree.h  ImGuiCodeParser.h  ImGuiDemoParser.cpp  ImGuiDemoParser.h  Sources.cpp
